--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,49 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo",
+    "Pretendard Variable", Pretendard, Roboto, "Noto Sans KR", "Segoe UI",
+    "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    sans-serif;
+}
+
+.title-lg {
+  font-size: 30px;
+  line-height: 120%;
+}
+
+.title-md {
+  font-size: 26px;
+  line-height: 120%;
+}
+
+.title-sm {
+  font-size: 20px;
+  line-height: 130%;
+}
+
+.text-lg {
+  font-size: 18px;
+  line-height: 140%;
+}
+
+.text-md {
+  font-size: 18px;
+  line-height: 140%;
+}
+
+.text-sm {
+  font-size: 18px;
+  line-height: 180%;
+}
+
+.caption {
+  font-size: 14px;
+  line-height: 140%;
 }
