--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
     "Pretendard Variable", Pretendard, Roboto, "Noto Sans KR", "Segoe UI",
     "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
     sans-serif;
+  outline: none;
 }
 
 .title-lg {
